azuredeploy.json
{
    "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {
      "apiManagementServiceName": {
        "type": "string",
        "defaultValue": "[concat('apiservice', uniqueString(resourceGroup().id))]",
        "metadata": {
          "description": "Name of the API Management service."
        }
      },
      "publisherEmail": {
        "type": "string",
        "minLength": 1,
        "metadata": {
          "description": "The email address of the owner of the service"
        }
      },
      "publisherName": {
        "type": "string",
        "minLength": 1,
        "metadata": {
          "description": "The name of the owner of the service"
        }
      },
      "sku": {
        "type": "string",
        "allowedValues": [
          "Developer",
          "Standard",
          "Premium"
        ],
        "defaultValue": "Developer",
        "metadata": {
          "description": "The pricing tier of this API Management service"
        }
      },
      "skuCount": {
        "type": "int",
        "defaultValue": 1,
        "metadata": {
          "description": "The instance size of this API Management service."
        }
      },
      "virtualNetworkName": {
        "type": "string",
        "metadata": {
          "description": "Virtual Network name"
        }
      },
      "virtualNetworkAddressPrefix": {
        "type": "string",
        "defaultValue": "10.0.0.0/24",
        "metadata": {
          "description": "Address prefix"
        }
      },
      "subnetPrefix": {
        "type": "string",
        "defaultValue": "10.0.0.0/28",
        "metadata": {
          "description": "Subnet Prefix"
        }
      },
      "subnetName": {
        "type": "string",
        "metadata": {
          "description": "API Management Subnet"
        }
      },
       "subnetPrefix2": {
        "type": "string",
        "defaultValue": "10.0.0.16/28",
        "metadata": {
          "description": "Subnet Prefix"
        }
      },
      "subnetName2": {
        "type": "string",
        "metadata": {
          "description": "Application Gateway Subnet"
        }
      },
      "location": {
        "type": "string",
        "defaultValue": "[resourceGroup().location]",
        "metadata": {
          "description": "Location for all resources."
        }
      }
    },
    "variables": {
      "subnetRef": "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('virtualNetworkName'), parameters('subnetName'))]",
      "apimNsgName": "[concat('apimnsg', uniqueString(resourceGroup().id))]"
    },
    "resources": [
      {
        "type": "Microsoft.Network/networkSecurityGroups",
        "name": "[variables('apimNsgName')]",
        "apiVersion": "2018-10-01",
        "location": "[parameters('location')]",
        "properties": {
          "securityRules": [
            {
              "name": "Client_communication_to_API_Management",
              "properties": {
                "protocol": "Tcp",
                "sourcePortRange": "*",
                "destinationPortRange": "80",
                "sourceAddressPrefix": "VirtualNetwork",
                "destinationAddressPrefix": "VirtualNetwork",
                "access": "Allow",
                "priority": 100,
                "direction": "Inbound"
              }
            },
            {
              "name": "Secure_Client_communication_to_API_Management",
              "properties": {
                "protocol": "Tcp",
                "sourcePortRange": "*",
                "destinationPortRange": "443",
                "sourceAddressPrefix": "VirtualNetwork",
                "destinationAddressPrefix": "VirtualNetwork",
                "access": "Allow",
                "priority": 110,
                "direction": "Inbound"
              }
            },
            {
              "name": "Management_endpoint_for_Azure_portal_and_Powershell",            
              "properties": {
                "protocol": "Tcp",
                "sourcePortRange": "*",
                "destinationPortRange": "3443",
                "sourceAddressPrefix": "ApiManagement",
                "destinationAddressPrefix": "VirtualNetwork",
                "access": "Allow",
                "priority": 120,
                "direction": "Inbound"
              }
            },
            {
              "name": "Dependency_on_Redis_Cache",
              "properties": {
                "protocol": "Tcp",
                "sourcePortRange": "*",
                "destinationPortRange": "6381-6383",
                "sourceAddressPrefix": "VirtualNetwork",
                "destinationAddressPrefix": "VirtualNetwork",
                "access": "Allow",
                "priority": 130,
                "direction": "Inbound"
              }
            },
            {
              "name": "Dependency_on_Azure_SQL",
              "properties": {
                "protocol": "Tcp",
                "sourcePortRange": "*",
                "destinationPortRange": "1433",
                "sourceAddressPrefix": "VirtualNetwork",
                "destinationAddressPrefix": "Sql",
                "access": "Allow",
                "priority": 140,
                "direction": "Outbound"
              }
            },
            {
              "name": "Dependency_for_Log_to_event_Hub_policy",
              "properties": {
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "5671",
                "sourceAddressPrefix": "VirtualNetwork",
                "destinationAddressPrefix": "EventHub",
                "access": "Allow",
                "priority": 150,
                "direction": "Outbound"
              }
            },
            {
              "name": "Dependency_on_Redis_Cache_outbound",
              "properties": {
                "protocol": "Tcp",
                "sourcePortRange": "*",
                "destinationPortRange": "6381-6383",
                "sourceAddressPrefix": "VirtualNetwork",
                "destinationAddressPrefix": "VirtualNetwork",
                "access": "Allow",
                "priority": 160,
                "direction": "Outbound"
              }
            },
            {
              "name": "Dependency_on_Azure_File_Share_for_GIT",
              "properties": {
                "protocol": "Tcp",
                "sourcePortRange": "*",
                "destinationPortRange": "445",
                "sourceAddressPrefix": "VirtualNetwork",
                "destinationAddressPrefix": "Storage",
                "access": "Allow",
                "priority": 170,
                "direction": "Outbound"
              }
            },
            {
              "name": "Azure_Infrastructure_Load_Balancer",
              "properties": {
                "protocol": "Tcp",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "AzureLoadBalancer",
                "destinationAddressPrefix": "VirtualNetwork",
                "access": "Allow",
                "priority": 180,
                "direction": "Inbound"
              }
            },
            {
              "name": "Publish_DiagnosticLogs_And_Metrics",
              "properties": {
                "description": "APIM Logs and Metrics for consumption by admins and your IT team are all part of the management plane",
                "protocol": "Tcp",
                "sourcePortRange": "*",
                "sourceAddressPrefix": "VirtualNetwork",
                "destinationAddressPrefix": "AzureMonitor",
                "access": "Allow",
                "priority": 185,
                "direction": "Outbound",              
                "destinationPortRanges": [
                  "443",
                  "12000",
                  "1886"
                ]
              }
            },
            {
              "name": "Connect_To_SMTP_Relay_For_SendingEmails",
              "properties": {
                "description": "APIM features the ability to generate email traffic as part of the data plane and the management plane",
                "protocol": "Tcp",
                "sourcePortRange": "*",
                "sourceAddressPrefix": "VirtualNetwork",
                "destinationAddressPrefix": "Internet",
                "access": "Allow",
                "priority": 190,
                "direction": "Outbound",              
                "destinationPortRanges": [
                  "25",
                  "587",
                  "25028"
                ]
              }
            },
            {
              "name": "Authenticate_To_Azure_Active_Directory",            
              "properties": {
                "description": "Connect to Azure Active Directory for Developer Portal Authentication or for Oauth2 flow during any Proxy Authentication",
                "protocol": "Tcp",
                "sourcePortRange": "*",
                "sourceAddressPrefix": "VirtualNetwork",
                "destinationAddressPrefix": "AzureActiveDirectory",
                "access": "Allow",
                "priority": 200,
                "direction": "Outbound",
                "destinationPortRanges": [
                  "80",
                  "443"
                ]
              }
            },
            {
              "name": "Dependency_on_Azure_Storage",
              "properties": {
                "description": "APIM service dependency on Azure Blob and Azure Table Storage",
                "protocol": "Tcp",
                "sourcePortRange": "*",
                "destinationPortRange": "443",
                "sourceAddressPrefix": "VirtualNetwork",
                "destinationAddressPrefix": "Storage",
                "access": "Allow",
                "priority": 100,
                "direction": "Outbound"
              }
            },
            {
              "name": "Publish_Monitoring_Logs",
              "properties": {
                "protocol": "Tcp",
                "sourcePortRange": "*",
                "destinationPortRange": "443",
                "sourceAddressPrefix": "VirtualNetwork",
                "destinationAddressPrefix": "AzureCloud",
                "access": "Allow",
                "priority": 300,
                "direction": "Outbound"
              }
            },
            {
              "name": "Deny_All_Internet_Outbound",
              "properties": {
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "VirtualNetwork",
                "destinationAddressPrefix": "Internet",
                "access": "Deny",
                "priority": 999,
                "direction": "Outbound"
              }
            }
          ]
        },
        "dependsOn": []
      },
      {
        "apiVersion": "2018-10-01",
        "type": "Microsoft.Network/virtualNetworks",
        "name": "[parameters('virtualNetworkName')]",
        "location": "[parameters('location')]",
        "dependsOn": [
          "[resourceId('Microsoft.Network/networkSecurityGroups', variables('apimNsgName'))]"
        ],
        "properties": {
          "addressSpace": {
            "addressPrefixes": [
              "[parameters('virtualNetworkAddressPrefix')]"
            ]
          },
          "subnets": [
            {
              "name": "[parameters('subnetName')]",
              "properties": {
                "addressPrefix": "[parameters('subnetPrefix')]",
                "networkSecurityGroup": {
                  "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('apimNsgName'))]"
                }
              }
            },
            {
              "name": "[parameters('subnetName2')]",
              "properties": {
                "addressPrefix": "[parameters('subnetPrefix2')]",
                "networkSecurityGroup": {
                  "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('apimNsgName'))]"
                }
              }
            }
          ]
        }
      },
      {
        "apiVersion": "2018-01-01",
        "name": "[parameters('apiManagementServiceName')]",
        "type": "Microsoft.ApiManagement/service",
        "location": "[parameters('location')]",
        "dependsOn": [
          "[resourceId('Microsoft.Network/virtualNetworks', parameters('virtualNetworkName'))]"
        ],
        "sku": {
          "name": "[parameters('sku')]",
          "capacity": "[parameters('skuCount')]"
        },
        "properties": {
          "publisherEmail": "[parameters('publisherEmail')]",
          "publisherName": "[parameters('publisherName')]",
          "virtualNetworkType": "Internal",
          "virtualNetworkConfiguration": {
            "subnetResourceId": "[variables('subnetRef')]"
          }
        }
      }
    ]
  }
